src/tools/dmlc/test/1.4/errors/dml-1.2.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
/// WEXPERIMENTAL
dml 1.2;
